chore: make analyzer compatible with JDK 8